# GameEngine

./: .gitignore  .gitmodules  LICENSE  README.md
Solution/: CMakeLists.txt  CMakePresets.json
Solution/Engine/: .clang-tidy  CMakeLists.txt  Engine.h  EntryPoint.h  Minimal.h  Minimal.hpp
Solution/Engine/Source/: Core.hpp  Definition.hpp  EntryPoint.cpp  EntryPoint.hpp  Intrinsics.hpp  Log.cpp  Log.hpp  Math.hpp  Random.hpp  Tile.cpp  Tile.hpp  World.cpp  World.hpp
Solution/Engine/Source/Platform/: PlatformWindows.cpp
Solution/GameEngine/: CMakeLists.txt  GameEngine.cpp
Solution/Sandbox/: .clang-tidy  CMakeLists.txt  Game.cpp  Test.cpp  Test.hpp
Solution/Sandbox/Platform/: .clang-tidy  PlatformWindows.cpp
Solution/Source/: CMakeLists.txt  GameEngine.cpp
